--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     pull_policy: build
     volumes:
       - /storage/mdcu-anandaydonation/uploads:/app/uploads:rw,z
-    restart: always
+    restart: unless-stopped
     env_file:
       - stack.env
     labels:
