--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "6.4.1",
+    "@prisma/client": "6.19.1",
+    "@prisma/config": "^7.2.0",
     "@tanstack/react-table": "^8.21.3",
     "csv-parse": "^5.6.0",
     "next": "15.4.10",
@@ -24,6 +25,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "daisyui": "^4.12.24",
+    "dotenv": "^17.2.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "typescript": "^5.9.3"
