--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "7.2.0",
+    "@prisma/adapter-mariadb": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@prisma/config": "^7.2.0",
     "@tanstack/react-table": "^8.21.3",
     "csv-parse": "^5.6.0",
+    "mariadb": "^3.4.5",
     "next": "15.4.10",
     "next-auth": "^4.24.13",
     "react": "^19.2.3",
