--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "next-auth": "^4.24.13",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
     "@types/node": "^20.19.27",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "daisyui": "^4.12.24",
-    "dotenv": "^17.2.3",
     "postcss": "^8.5.6",
     "prisma": "^7.2.0",
     "tailwindcss": "^3.4.19",
