feat: update prisma 6 to 7

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
-# Database url
+# Database
 DATABASE_URL=""
+DATABASE_USER="username"
+DATABASE_PASSWORD="password"
+DATABASE_NAME="mydb"
+DATABASE_HOST="localhost"
+DATABASE_PORT=3306
 
 # Password to log in to admin page
 PASSPHRASE=""
