--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "6.4.1",
+    "@prisma/adapter-mariadb": "^7.2.0",
+    "@prisma/client": "7.2.0",
     "@tanstack/react-table": "^8.21.3",
     "csv-parse": "^5.6.0",
     "next": "15.4.10",
     "next-auth": "^4.24.13",
-    "prisma": "^6.19.1",
+    "prisma": "^7.2.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "xlsx": "^0.18.5"
