--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/config": "^7.2.0",
     "@tanstack/react-table": "^8.21.3",
     "csv-parse": "^5.6.0",
+    "dotenv": "^17.2.3",
     "mariadb": "^3.4.5",
     "next": "^15.4.10",
     "next-auth": "^4.24.13",
